# batch-debugging

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_scripts.py
.github/workflows/: python-publish.yml
client/: README.md  pyproject.toml
client/nextflow_tower_api_client/: __init__.py
client/nextflow_tower_api_client/models/: __init__.py  abstract_grid_config.py  access_token.py  action_query_attribute.py  action_source.py  action_status.py  action_tower_action_config.py  action_tower_action_event.py  add_member_request.py  add_member_response.py  add_participant_request.py  add_participant_response.py  add_team_member_response.py  agent_security_keys.py  altair_pbs_configuration.py  amazon_eks_cluster_configuration.py  analytics.py  associate_action_labels_request.py  associate_pipeline_labels_request.py  associate_workflow_labels_request.py  avatar.py  (+225 more)
core/: AuthenticatedTowerClientInterface.py  ComputeEnvsInterface.py  autoscaling.py  awsBatch.py  aws_batch.py  aws_quotas.py  client.py  cloudwatch.py  compute_envs.py  debug_aws_batch.py  ec2.py  ecs.py  gcp_batch.py
core/models/: aws_batch.py  cloudwatch.py
examples-scripts/: pulumi_compute_engine.py
infrastructure/: compute-engine-config-template.yaml  gcp_compute_engine.py  gcp_gke_cluster.py  gke-config-template.yaml  ingress-gke.yaml  minimal_gcp_compute_engine.py  pulumi-config-template.yaml  pulumi.py  pulumi_config.py  pulumi_infra_config.py  seqera_platform.py  standard_gcp_compute_engine.py  tower-launcher.yaml
infrastructure/models/: config.py  pulumi.py
(+141 files in other folders)
