[tool.poetry]
name = "batch_debugging"
version = "0.0.2"
description = "A python library that assists in debugging batch compute enviornments in AWS, GCP and Azure and Kubernetes"
authors = ["Shahbaz Mahmood <shahbazmahmooood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
attrs = "^23.1.0"
boto3 = "^1.29.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
